[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openaireview-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "openaireview>=0.1.6",
    "firebase-admin>=6.0.0",
    "resend>=2.0.0",
]

[tool.setuptools]
py-modules = ["main", "store", "ratelimit", "worker"]
